# prompt-evaluator

./: .env.example  .gitignore  README.md  prompt_evaluator.yaml  pyproject.toml
.github/repo-analysis-output/: dependencies.json  dependencies.md  file-summaries.json  file-summaries.md  tree.json  tree.md
config_custom_output/7342f278-4d51-461f-a433-4d071e828c0c/: metadata.json
config_custom_output/8073f586-c4e4-4c2b-a5cb-21ad14b4bc71/: metadata.json  output.txt
config_runs/491a4b09-e473-415e-80b2-dc7e5f68d3e0/: evaluate-single.json
config_runs/dc1f624d-7304-4818-82b6-b6eb2a2bea08/: evaluate-single.json
docs/: ab-testing.md  datasets.md  json-schema-validation-status.md  reporting.md
examples/: input.txt  system_prompt.txt
examples/datasets/: sample.jsonl  sample.yaml
examples/rubrics/: code_review.json  content_quality.yaml  default.yaml
examples/run-artifacts/: comparison-report-sample.md  comparison-sample.json  index.json  report-sample.md  run-sample.json
examples/schemas/: simple_response.json
src/prompt_evaluator/: __init__.py  cli.py  comparison.py  config.py  dataset_evaluation.py  models.py  provider.py  (+1 more)
tests/: __init__.py  test_aggregation.py  test_basic.py  test_compare_prompts_cli.py  test_compare_report.py  test_compare_runs_cli.py  test_comparison.py  test_comparison_wlt.py  test_config_manager.py  test_config_models.py  test_dataset_evaluation.py  test_dataset_loader.py  test_evaluate_dataset_cli.py  test_evaluate_single_cli.py  test_generate_cli.py  test_judge_models.py  test_mock_provider_integration.py  test_prompt_version_metadata.py  test_provider_abstraction.py  test_provider_independence.py  test_rubric_cli.py  test_rubric_models.py  test_run_report.py
(+3 files in other folders)
